don't fix header to top on mobile

--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -10,6 +10,30 @@
     background-color: $white;
     padding: 10px 0;
     z-index: 1000;
+    transition: background-color .3s, opacity .3s;
+
+    @include elr-breakpoint($neptune + 1, 'min-width') {
+        &.fixed-header {
+            background-color: $elr-blue;
+            opacity: .8;
+
+            .main-nav-item {
+                color: $white;
+
+                &:hover {
+                    color: $white;
+                }
+            }
+
+            .site-heading a {
+                color: $white;
+            }
+        }
+    }
+
+    @include elr-breakpoint('neptune') {
+        position: relative;
+    }
 }
 
 .site-heading {
@@ -17,7 +41,7 @@
     float: left;
     padding: 0 0 0 10px;
 
-    @include elr-breakpoint(saturn) {
+    @include elr-breakpoint('saturn') {
         text-align: center;
     }
 
